# pydbzengine

./: .gitignore  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: release-test.yml  release.yml  tests.yml
.run/: Python tests in tests.run.xml
pydbzengine/: __init__.py  airflow.py  debeziumdlt.py  helper.py  install_libs.sh  pom.xml
pydbzengine/config/: log4j2.properties
pydbzengine/examples/: dlt_consuming.py
pydbzengine/handlers/: dlt.py  iceberg.py
tests/: DbMysql.py  DbPostgresql.py  TestUtil.py  base_postgresql_test.py  catalog_rest.py  db_postgresql.py  s3_minio.py  test_change_handler.py  test_debeziumdlt.py  test_dlt_handler.py  test_engine.py  test_iceberg_handler.py  test_mysql.py  test_postgresql.py  testing_utils.py
tests/config/: log4j2-test.properties  log4j2.properties
